<resources>
    <string name="app_name">Login &amp; Registration Pages</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration_page">Registration Page</string>
    <string name="email_id">Email ID</string>
    <string name="welcome_to_home">Welcome To Home</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
</resources>